--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".SignUpActivity" />
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".AlAhlyActivity" />
+        <activity android:name=".BanqueMisrActivity" />
+        <activity android:name=".ProfileActivity"></activity>
     </application>
 
 </manifest>
