--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation 'com.google.firebase:firebase-storage:16.0.1'
 
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.android.support:palette-v7:27.1.1'
+
+
+
 }
 
 apply plugin: 'com.google.gms.google-services'
