--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".LoginActivity" />
         <activity android:name=".AlAhlyActivity" />
         <activity android:name=".BanqueMisrActivity" />
-        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".ResumeActivity"></activity>
     </application>
 
 </manifest>
