--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity android:name=".AlAhlyActivity" />
         <activity android:name=".BanqueMisrActivity" />
         <activity android:name=".ProfileActivity" />
-        <activity android:name=".ResumeActivity"></activity>
+        <activity android:name=".ResumeActivity" />
+        <activity android:name=".QuizActivity"></activity>
     </application>
 
 </manifest>
