--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -26,10 +24,27 @@
         <activity android:name=".BanqueMisrActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".ResumeActivity" />
-        <activity android:name=".QuizActivity"/>
+        <activity android:name=".QuizActivity" />
+
         <provider
+            android:name=".Database.AppContentProvider"
             android:authorities="mohalim.android.egybankstest"
-            android:name="mohalim.android.egybankstest.Database.AppContentProvider"
+            android:exported="false" />
+
+        <receiver android:name=".Widget.AppResumeWidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/app_resume_widget_info" />
+        </receiver>
+
+        <service android:name=".Widget.ResumeWidgetService" />
+
+        <service android:name=".Widget.ListViewRemoteService"
+            android:permission="android.permission.BIND_REMOTEVIEWS"
             android:exported="false" />
 
     </application>
