--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
         config {
             keyAlias 'MohamedALi'
             keyPassword 'Rm654326987'
-            storeFile file('/media/mohamedali/Study/GoogleScholarship/Mohalim.jks')
+            storeFile file("$rootDir/Mohalim.jks")
             storePassword 'Mohalim654326'
         }
     }
@@ -34,9 +34,8 @@ dependencies {
     implementation 'com.android.support:animated-vector-drawable:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+
     implementation 'com.squareup.picasso:picasso:2.71828'
     /**
      * FireBase Dependencies
